# talk-to-me

./: .gitignore  Cargo.toml  bacon.toml  build.rs
src/: client.rs  server.rs
src/backend/: audio.rs  connection.rs  mod.rs  udp_handler.rs
src/ui/: com.geeksesi.talk-to-me.gschema.xml  mod.rs  style.css
src/ui/audio/: connection.rs  debug.rs  mod.rs
src/ui/connection/: mod.rs
src/ui/message_row/: imp.rs  mod.rs
src/ui/resources/: message_row.ui  preferences.ui  resources.gresource.xml  window.ui
src/ui/window/: connection.rs  imp.rs  mod.rs
