[package]
name = "talk-to-me"
version = "0.1.0"
edition = "2021"
default-run = "client"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"



[dependencies]
tokio = { version = "1.42.0", features = ["full", "tracing"] }
dotenv = "0.15.0"
tokio-uring = { version = "0.5.0" }
tokio-util = "0.7.13"
tracing= "0.1.41"
tracing-subscriber = "0.3.18"
ctrlc = "3.4.4"
miette = { version = "7.4.0", features = ["fancy"] }
chrono = "0.4.39"

crossterm = { version = "0.28.1", features = ["event-stream"] }

r3bl_terminal_async = { version = "0.5.6" }
hound = "3.5.1"
opus = "0.3.0"

# client
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_14"] }
glib = "0.20.7"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
once_cell = "1.20.0"
cpal = "0.15.2"
ringbuf = "0.4.7"

[build-dependencies]
glib-build-tools = "0.20.0"

